--- a/templates/upload.html
+++ b/templates/upload.html
@@ -8,5 +8,7 @@
         <input type="file" name="file" accept="application/pdf" required>
         <button type="submit">Загрузить</button>
     </form>
+    
+    <a href="{{ url_for('show_docs') }}">Показать документ</a>
     <a href="{{ url_for('delete_page') }}">Удалить документ</a>
 {% endblock %}
