--- a/templates/base.html
+++ b/templates/base.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}AAA{% endblock %}</title>
+    <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
     {% block extra_css %}{% endblock %}
 </head>
@@ -11,50 +12,96 @@
     <div id="app">
         <!-- Навигационная панель -->
         <header>
-            <div class="logo">
-                <svg width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                    <path d="M4 19.5A2.5 2.5 0 0 1 6.5 17H20"></path>
-                    <path d="M6.5 2H20v20H6.5A2.5 2.5 0 0 1 4 19.5v-15A2.5 2.5 0 0 1 6.5 2z"></path>
-                </svg>
-
-                <svg width="32" height="32" fill="currentColor" version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" 
-	                viewBox="0 0 31.082 31.082"
-	                xml:space="preserve">
-                    <g>
-	                    <g>
-                            <g>
-                                <circle cx="18.718" cy="13.211" r="1.256"/>
-                            </g>
-		                <g>
-                            <path d="M25.357,17.068h0.246c1.198,0,2.169-0.973,2.169-2.17v-2.387c0-0.825-0.461-1.542-1.137-1.91
-                                c-0.023-3.389-1.012-6.036-2.941-7.866C21.78,0.921,19.038,0,15.541,0C12.044,0,9.3,0.92,7.387,2.735
-                                c-1.929,1.83-2.917,4.477-2.94,7.866c-0.677,0.367-1.137,1.085-1.137,1.91v2.387c0,1.198,0.972,2.17,2.17,2.17H7
-                                c0,0,0.316,0.671,0.502,1.057c-0.052,0.354-0.027,0.982-0.401,1.536c-0.411,0.606-1.223,1.022-1.906,1.262
-                                c-0.067,0.023-0.111,0.089-0.108,0.16s0.054,0.132,0.123,0.149c0.308,0.074,0.636,0.108,0.966,0.096
-                                c-0.4,0.514-0.915,0.997-1.581,1.378c-0.208,0.119-0.337,0.34-0.339,0.58c-0.002,0.239,0.123,0.463,0.329,0.585
-                                c0.271,0.162,0.554,0.307,0.842,0.438c-0.442,1.09-0.691,2.266-0.691,3.498v0.541c0,1.51,1.225,2.734,2.735,2.734h16.144
-                                c1.51,0,2.734-1.225,2.734-2.734v-0.541c0-1.232-0.245-2.412-0.686-3.502c0.285-0.13,0.565-0.272,0.836-0.434
-                                c0.205-0.123,0.332-0.346,0.33-0.585c-0.002-0.24-0.131-0.46-0.34-0.58c-0.666-0.381-1.182-0.864-1.582-1.378
-                                c0.33,0.013,0.657-0.021,0.965-0.096c0.069-0.018,0.121-0.078,0.123-0.149c0.004-0.071-0.041-0.137-0.107-0.16
-                                c-0.684-0.239-1.495-0.655-1.906-1.262c-0.374-0.554-0.35-1.183-0.4-1.536c0.186-0.386,0.502-1.057,0.502-1.057H25.357z
-                                M18.081,9.818c2.258,0.238,4.049,0.915,5.028,1.809c0.042,0.509,0.07,1.033,0.07,1.593c0,1.304-0.294,2.453-0.651,3.506
-                                c-0.135,0.402-0.433,1.064-0.99,1.933c-1.644,2.552-4.347,3.839-5.998,3.839c-1.649,0-4.292-1.328-5.996-3.839
-                                c1.212,0.571,2.573,0.782,3.809,0.854c0.305,0.559,1.068,0.955,1.963,0.955c1.165,0,2.106-0.669,2.106-1.496
-                                c0-0.826-0.942-1.496-2.106-1.496c-0.858,0-1.594,0.364-1.924,0.889c-1.77-0.109-3.77-0.521-4.98-1.983
-                                c-0.321-0.95-0.51-2.005-0.51-3.163c0-0.317,0.012-0.622,0.024-0.922c2.156-0.301,4.097-2.437,4.156-5.175
-                                c1.676,3.421,4.519,3.256,6.127,3.737c0.127,0.038,0.264-0.007,0.343-0.112s0.085-0.249,0.015-0.359
-                                C18.425,10.164,18.259,9.978,18.081,9.818z M22.563,5.448c-1.562-2.008-3.924-3.027-7.023-3.027S10.08,3.44,8.519,5.448
-                                c-0.979,1.26-1.625,2.9-1.931,4.894H5.753c0.137-5.915,3.513-9.04,9.787-9.04s9.65,3.125,9.789,9.039h-0.836
-                                C24.188,8.348,23.542,6.708,22.563,5.448z"/>
+            <div class="logo flex flex-col items-center">
+                <div class="flex items-center">
+                    <svg version="1.0" xmlns="http://www.w3.org/2000/svg"
+                        width="40" height="40" viewBox="0 0 740.000000 872.000000"
+                        preserveAspectRatio="xMidYMid meet">
+    
+                        <g transform="translate(0.000000,872.000000) scale(0.100000,-0.100000)"
+                        fill="currentColor" stroke="none">
+                        <path d="M3444 8689 c194 -65 337 -158 506 -329 134 -135 222 -259 309 -435
+                        138 -276 215 -591 236 -960 9 -172 7 -166 73 -204 31 -19 88 -64 125 -100 202
+                        -194 272 -468 191 -747 -65 -227 -199 -369 -410 -438 -59 -19 -76 -36 -130
+                        -126 -120 -201 -366 -475 -584 -650 -260 -207 -711 -465 -888 -506 -57 -13
+                        -70 -13 -115 0 -69 20 -120 64 -153 132 -22 45 -26 63 -21 105 7 61 51 143 92
+                        175 63 48 101 57 211 50 l102 -7 103 51 c325 164 663 430 859 676 l61 77 -64
+                        42 c-134 90 -240 249 -288 430 -31 114 -31 317 0 429 11 44 21 82 21 86 0 4
+                        -16 11 -35 14 -65 13 -189 58 -275 101 -324 164 -569 482 -596 776 -4 39 -3
+                        69 2 69 5 0 35 -52 67 -115 157 -309 340 -503 591 -625 128 -62 253 -93 358
+                        -88 l77 3 78 76 c87 84 128 112 205 139 l53 18 3 129 c11 480 -186 1003 -492
+                        1309 -239 238 -554 364 -909 364 -302 0 -724 -134 -999 -317 -283 -189 -477
+                        -419 -708 -841 -97 -179 -120 -244 -120 -354 0 -236 153 -464 463 -686 l46
+                        -33 -25 73 c-51 152 -53 343 -3 504 35 114 43 77 50 -234 l6 -277 46 -110 c26
+                        -60 47 -116 47 -123 0 -31 -48 -60 -128 -77 -45 -10 -82 -21 -82 -25 0 -16 57
+                        -31 141 -37 l90 -6 -7 -41 c-3 -23 -17 -77 -30 -121 -58 -194 -66 -244 -61
+                        -365 5 -143 18 -182 167 -515 161 -360 186 -423 236 -590 25 -82 56 -168 69
+                        -192 50 -85 146 -137 273 -149 51 -5 110 1 251 25 108 19 188 28 193 23 18
+                        -18 37 -252 38 -452 l0 -205 -156 -270 c-199 -343 -201 -347 -241 -490 -53
+                        -187 -184 -708 -179 -713 3 -2 15 13 29 35 313 500 377 598 431 667 37 46 168
+                        150 666 530 206 157 520 397 698 532 254 194 322 251 322 268 0 13 -9 49 -21
+                        82 -47 137 -99 329 -114 430 -31 192 -10 449 40 504 9 10 62 41 119 69 188 94
+                        338 237 431 411 85 161 95 161 65 0 -25 -132 -50 -203 -155 -440 -108 -243
+                        -128 -326 -128 -510 0 -117 4 -160 21 -223 89 -327 411 -714 767 -922 363
+                        -212 739 -253 1199 -131 289 77 542 221 739 420 59 60 106 110 104 113 -3 2
+                        -44 -16 -93 -41 -307 -153 -616 -132 -904 64 -92 62 -92 70 -3 47 62 -16 112
+                        -20 238 -21 180 -1 239 12 365 81 89 49 228 189 269 270 53 106 41 112 -47 23
+                        -129 -131 -248 -168 -432 -137 -232 39 -404 190 -430 379 -10 66 -2 126 29
+                        238 45 157 36 339 -24 527 -13 43 -25 81 -25 84 0 3 32 -5 70 -18 235 -79 508
+                        -21 643 137 84 98 111 218 70 308 l-17 37 -6 -66 c-8 -83 -35 -136 -89 -174
+                        -86 -61 -256 -42 -386 43 -102 66 -180 160 -320 387 -87 139 -145 218 -278
+                        377 -59 70 -107 130 -107 133 0 3 30 -16 68 -41 133 -92 271 -247 363 -408 23
+                        -41 44 -74 46 -72 8 8 -40 134 -80 211 -55 106 -139 217 -217 288 -82 74 -268
+                        168 -395 199 -128 31 -356 31 -504 -1 -57 -12 -105 -20 -108 -17 -2 2 5 48 16
+                        101 98 451 -1 1009 -234 1316 -57 76 -135 165 -135 155 0 -3 12 -25 26 -48 42
+                        -66 148 -285 187 -383 149 -382 184 -764 105 -1150 -23 -115 -107 -375 -120
+                        -375 -5 0 -7 8 -4 18 12 39 57 356 67 472 14 156 6 467 -15 580 -68 366 -224
+                        678 -455 908 -275 272 -693 443 -1084 442 l-92 0 89 -31z m-547 -1054 c166
+                        -339 423 -597 747 -751 53 -25 96 -48 94 -50 -3 -2 -48 3 -101 11 -329 49
+                        -591 229 -728 500 -63 126 -88 220 -95 360 -4 109 -4 110 13 75 9 -19 41 -84
+                        70 -145z m-177 -192 c-1 -107 -64 -267 -141 -356 -65 -76 -88 -80 -39 -7 55
+                        80 112 204 141 303 22 72 39 99 39 60z m2151 -2793 c-10 -263 56 -562 180
+                        -814 l50 -101 -40 43 c-87 95 -170 266 -213 440 -35 142 -29 389 13 500 5 12
+                        10 22 11 22 2 0 1 -41 -1 -90z"/>
+                        <path d="M3020 8682 c-16 -3 16 -13 90 -28 451 -91 784 -362 1006 -819 130
+                        -269 191 -542 210 -941 l6 -141 -53 -13 c-86 -20 -175 -67 -229 -121 -62 -62
+                        -134 -205 -156 -309 -43 -205 33 -480 167 -607 30 -28 135 -97 162 -106 16 -5
+                        -8 -42 -137 -201 -146 -181 -297 -340 -426 -448 -136 -114 -364 -263 -538
+                        -351 l-151 -76 -73 20 c-84 24 -124 19 -168 -17 -62 -53 -62 -155 0 -208 62
+                        -52 145 -44 222 21 24 19 103 64 177 99 473 225 873 565 1122 954 99 154 109
+                        165 174 179 88 20 188 75 239 132 94 105 149 260 149 419 0 121 -22 210 -79
+                        327 -58 122 -132 199 -237 249 -42 20 -82 43 -89 51 -8 10 -15 72 -20 177 -24
+                        509 -120 834 -348 1178 -77 117 -230 284 -327 356 -140 105 -302 187 -430 216
+                        -67 15 -205 20 -263 8z m1470 -2173 c54 -27 105 -87 142 -164 32 -67 33 -75
+                        33 -190 0 -113 -2 -124 -31 -185 -58 -123 -131 -181 -229 -182 -215 -2 -353
+                        332 -239 582 66 144 201 202 324 139z"/>
+                        <path d="M3842 6497 c-31 -33 -71 -126 -88 -209 -12 -53 -15 -104 -11 -183 10
+                        -206 73 -354 208 -487 79 -78 95 -88 117 -66 8 8 -8 30 -67 89 -136 135 -204
+                        304 -204 509 0 117 13 197 48 301 12 38 22 69 21 69 -1 0 -12 -10 -24 -23z"/>
+                        <path d="M4455 2935 c-203 -322 -374 -585 -378 -585 -5 0 -182 114 -395 253
+                        -429 282 -422 277 -452 277 -25 0 -382 -99 -392 -109 -4 -4 91 -69 212 -145
+                        121 -76 220 -142 220 -146 0 -7 -161 -197 -1158 -1363 -173 -203 -316 -366
+                        -318 -364 -2 2 14 120 36 263 65 423 198 1359 214 1504 28 264 29 270 14 265
+                        -53 -19 -472 -145 -474 -142 -2 2 151 135 341 296 357 304 372 317 362 328 -7
+                        7 -1094 -393 -1205 -443 -145 -66 -227 -139 -296 -265 -32 -60 -690 -1737
+                        -766 -1956 l-19 -53 157 -49 c480 -152 689 -212 931 -266 440 -98 757 -142
+                        1366 -189 509 -40 756 -49 1125 -42 1100 21 1964 129 2680 336 178 51 632 199
+                        643 209 4 5 -8 84 -27 177 -19 93 -74 358 -121 589 -48 231 -98 479 -111 550
+                        -67 347 -128 480 -291 636 -87 82 -73 72 -383 271 -124 80 -427 279 -675 443
+                        -247 163 -454 299 -460 301 -5 2 -176 -260 -380 -581z m-451 -1077 c27 -73 54
+                        -142 61 -153 10 -17 38 -24 163 -44 137 -22 184 -34 172 -44 -115 -91 -225
+                        -185 -236 -202 -12 -19 -12 -43 -2 -168 7 -81 9 -149 6 -152 -3 -3 -59 28
+                        -125 70 -66 41 -129 75 -140 75 -11 0 -79 -27 -152 -61 -73 -33 -135 -59 -137
+                        -57 -2 2 10 64 26 138 17 74 30 145 30 158 0 17 -33 60 -106 138 -59 63 -104
+                        117 -101 120 3 3 65 8 139 11 73 3 147 11 165 18 26 11 41 34 99 149 37 75 73
+                        136 79 136 7 0 33 -60 59 -132z"/>
                         </g>
-                        <g>
-			                <circle cx="12.364" cy="13.211" r="1.256"/>
-		                </g>
-	                    </g>
-                    </g>
-                </svg>
-                <span>AAA</span>
+                    </svg>
+                    <div class="ml-2 text-4xl">AAA</div>
+                </div>
+                <div class="text-[var(--text-light)] text-[0.625rem] text-center">Augmented Artificial Assistant</div>
             </div>
+            
             <nav>
                 <a href="{{ url_for('documents') }}" >
                 <button class="nav-button {% if request.endpoint == 'documents' %}active{% endif %}">
